# hardcaml-mips

./: .gitignore  .ocamlformat  CHANGELOG.md  LICENSE  README.md  dune  dune-project  hardcaml_mips.opam  interactive.ml  main.ml
.github/workflows/: test.yml
arty/: .gitignore  Makefile  arty.ml  dune  dune-project  hardcaml_arty_top.v  hardcaml_mips_arty.opam  interactive.ml  place.tcl  route.tcl  synth.tcl
arty/.Xil/: hardcaml_arty_top_propImpl.xdc
arty/ips/design_1_clk_wiz_0_0/: design_1_clk_wiz_0_0.veo  design_1_clk_wiz_0_0.xci  design_1_clk_wiz_0_0.xml  design_1_clk_wiz_0_0_clk_wiz.v
arty/ips/hardcaml_arty_tri_mode_ethernet_mac_0/: hardcaml_arty_tri_mode_ethernet_mac_0.xci
arty/lib/: dune  program.ml  uart.ml  uart.mli  wrapper.ml
arty/outputs/: hardcaml_arty_top.bit  post_place.dcp  post_place_timing_summary.rpt  post_route.dcp  post_route_bus_skew.rpt  post_route_timing_summary.rpt  post_route_utilization.rpt  post_synth.dcp
arty/outputs/ips/design_1_clk_wiz_0_0/: design_1_clk_wiz_0_0.v  design_1_clk_wiz_0_0.xci  design_1_clk_wiz_0_0.xdc  design_1_clk_wiz_0_0.xml
arty/outputs/ips/design_1_clk_wiz_0_0/doc/: clk_wiz_v6_0_changelog.txt
arty/test/: dune  test_uart.ml  test_wrapper.ml
lib/: cpu.ml  cpu.mli  datapath.ml  dune  program.ml  program.mli  width_check.ml
lib/instruction_decode/: control_unit.ml  forwarding_unit.ml  instruction_decode.ml  stall_unit.ml
lib/instruction_execute/: alu.ml  instruction_execute.ml
lib/instruction_fetch/: gen_next_pc.ml  instruction_fetch.ml
test/: dune  test_cpu.ml  test_cpu_uart.ml  test_datapath.ml
(+22 files in other folders)
