(lang dune 2.8)

(cram enable)

(package
 (name hardcaml_mips)
 (synopsis "A simple MIPS CPU learning project in Hardcaml."))

(version 0.1.0)

(generate_opam_files true)

(source
 (github askvortsov1/hardcaml-mips))

(license MIT)

(authors "Alexander Skvortsov" "Mayur Deshpande")

(maintainers "sasha.skvortsov109@gmail.com")

(homepage "https://ceramichacker.com/blog/category/hardcaml-mips")
